# SpaceGame

./: .gitignore  CMakeLists.txt  CPPClass.cpp  CPPClass.h  CPPNotes.cpp  CPPNotes.h  README.md  main.cpp
CPPNotes/: CMakeLists.txt  CPPNotes.cpp  main.cpp
GAMING PROJECT/: NOTES.txt
externalAPIs/gl2d/: CMakeLists.txt
externalAPIs/glfw-3.3.2/: CMakeLists.txt
externalAPIs/imgui-docking/: CMakeLists.txt
externalAPIs/stb_image/: CMakeLists.txt
externalAPIs/stb_truetype/: CMakeLists.txt
include/platform/: platformTools.h
src/gameLayer/: gameLayer.cpp
src/platform/: glfwMain.cpp
